# Project_basket

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  alembic.ini  app.py  basketball.db  demo.py  docker-compose.yml  init_project.sh  pyproject.toml  score.html  setup_dev.sh  setup_postgres.sh  test.db  test_basketball_analytics.db
.github/workflows/: ci.yml  roadmap.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  6e1d9951223b_initial.py  6e66c660ab88_initial_database_schema.py  create_basketball_stats_tables.py
backend/app/: api.py  auth.py  crud.py  database.py  db_models.py  main.py  models.py
backend/database/: __init__.py  models.py  schemas.py
demo_output/: analysis_results.json
docker/: Dockerfile.backend
docs/: database.md
frontend/: index.html  shot-chart.html
frontend/css/: style.css
frontend/js/: api.js  dashboard.js  main.js  shot-chart.js
scripts/: start_api.sh  update_roadmap.py
tests/: __init__.py  test_api.py  test_api_database.py  test_basketball_vision.py  test_database.py  test_database_api.py  test_detect.py  test_detect_placeholder.py  test_health.py  test_minimal_functionality.py  test_placeholder.py  test_schema.py  test_track.py
tests/stubs/: vision_stubs.py
tests/unit/: test_auth.py  test_stats_endpoints.py
vision/: analytics.py  detect.py  detector.py  processor.py  track.py  tracker.py
web_front/: package.json  tailwind.config.js
web_front/src/app/: globals.css  layout.tsx  page.tsx
web_front/src/app/club/dashboard/: page.tsx  page_backup.tsx
web_front/src/app/club/login/: page.tsx
web_front/src/app/login/: page.tsx
web_front/src/app/matches/: page.tsx
web_front/src/components/: VideoUpload.tsx
web_front/src/lib/: auth.ts
workers/: video_processor.py
