[tool.poetry]
name = "project_basket"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
opencv-python = "*"
ultralytics = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
alembic = "*"


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
pre-commit = "*"
detect-secrets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
