[tool.poetry]
name = "project_basket"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
httpx = "^0.27.2"
pydantic = "*"
opencv-python = "*"
ultralytics = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
alembic = "*"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.8.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
