[tool.poetry]
name = "project_basket"
version = "0.1.0"
description = ""
authors = []
packages = [
    {include = "backend"},
    {include = "vision"},
    {include = "workers"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
opencv-python = "*"
ultralytics = "*"
deep-sort-realtime = "*"
numpy = "*"
python-multipart = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
alembic = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
httpx = "*"
redis = "*"
rq = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
pre-commit = "*"
detect-secrets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
